1.6.1+build58 feat: updated possible rewards styles and script to detect active element fix: fixed General section README (common sort added); battle chat (wrong positioning)

--- a/src/Battle/BattleChat/BattleChat.css
+++ b/src/Battle/BattleChat/BattleChat.css
@@ -4,7 +4,7 @@
 	position: relative;
 	box-sizing: border-box;
 	width: 100%;
-	height: auto;
+	height: 100%;
 }
 
 /* All items inside chat container */
